0.03
 - Fix report() method in doc.
 - Implement record() method, which can has undefined message.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Update copyright years in LICENSE file.

0.02 2014-11-08T08:29:33+01:00
 - Fix dump() across Memory::Usage->dump().
 - Fix report() across Memory::Usage->report() in scalar mode.

0.01 2014-11-07T12:26:38+01:00
 - First version.