@@ -2,6 +2,7 @@
  - Fix report() method in doc.
  - Implement record() method, which can has undefined message.
  - Improve LICENSE AND COPYRIGHT section in doc.
+ - Update Module::Install to 1.16 version.
  - Update copyright years in LICENSE file.
 
 0.02 2014-11-08T08:29:33+01:00
